[ADDED] Min width to featured boxes hoping to fix formatting issue on IPhones.

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -374,6 +374,7 @@ body {
 }
 
 #featured-content a {
+    min-width: fit-content;
     text-decoration: none;
     margin-right: 5%;
     margin-left: 5%;
